refactor: clean up code structure in DynamicQueryBuilder for improved readability